chore: super configure for Render deployment with auto-migrations and blueprint optimizations

--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     region: oregon # Use oregon for US deployment
     plan: free # Free tier for students
     branch: main
+    autoDeploy: true
     healthCheckPath: /api/health
     envVars:
       - key: DATABASE_URL
