--- a/render.yaml
+++ b/render.yaml
@@ -11,9 +11,7 @@ services:
     startCommand: npm start
     envVars:
       - key: DATABASE_URL
-        fromDatabase:
-          name: tasued-biovault-db
-          property: connectionString
+        sync: false
       - key: JWT_SECRET
         generateValue: true
       - key: ENCRYPTION_KEY
@@ -32,10 +30,3 @@ services:
         value: "true"
       - key: JWT_EXPIRES_IN
         value: "24h"
-
-databases:
-  - name: tasued-biovault-db
-    plan: free
-    region: oregon
-    databaseName: tasued_biovault
-    user: biovault_user
