feat: Update institution name to Tai SOLARIN Federal University of Education

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "TASUED BioVault",
   "short_name": "BioVault",
-  "description": "Universal Student Biometric Identity Platform for Tai Solarin University of Education",
+  "description": "Universal Student Biometric Identity Platform for Tai SOLARIN Federal University of Education",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#f8fafc",
