--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,9 @@ JWT_SECRET="your_strong_secret_key_here"
 ENCRYPTION_KEY="your_32_character_encryption_key_here"
 
 # Application URL
-NEXT_PUBLIC_API_URL=https://your-app-name.onrender.com
-WEBAUTHN_RP_ID=your-app-name.onrender.com
-WEBAUTHN_ORIGIN=https://your-app-name.onrender.com
+NEXT_PUBLIC_API_URL=https://tasued-biometric-sys.onrender.com
+WEBAUTHN_RP_ID=tasued-biometric-sys.onrender.com
+WEBAUTHN_ORIGIN=https://tasued-biometric-sys.onrender.com
 
 # Security settings
 BCRYPT_SALT_ROUNDS=12
