--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,7 @@
       "use": "@vercel/next",
       "config": {
         "includeFiles": [
-          ".next/**",
-          "public/**",
-          "prisma/**",
-          ".env*"
+          "prisma/**"
         ]
       }
     }
@@ -18,6 +15,10 @@
     {
       "src": "/api/health",
       "dest": "/api/health"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
     },
     {
       "src": "/(.*)",
