--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "db:migrate:deploy": "prisma migrate deploy",
     "db:seed": "prisma db seed",
     "db:reset": "prisma migrate reset --force",
-    
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -39,14 +38,14 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@simplewebauthn/server": "^13.2.2",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
-    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
     "framer-motion": "^10.18.0",
-    "jose": "^6.1.3",
     "lucide-react": "^0.303.0",
     "next": "14.2.15",
     "next-themes": "^0.2.1",
@@ -65,7 +64,6 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
