docs: add missing supabase variables to deployment guide

--- a/.env.production.example
+++ b/.env.production.example
@@ -9,6 +9,10 @@ JWT_SECRET="your_strong_secret_key_minimum_32_characters_long"
 # Encryption key for biometric data (MUST be exactly 32 characters for AES-256)
 ENCRYPTION_KEY="your_32_character_encryption_key"
 
+# Supabase Configuration (Required for Auth)
+NEXT_PUBLIC_SUPABASE_URL="https://your-project.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="your-anon-key"
+
 # Application URLs - Update these based on your deployment platform
 # For Render:
 # NEXT_PUBLIC_API_URL=https://tasued-biometric-system-2.onrender.com
