Refactor auth and biometric services, enhance UI components, and add comprehensive documentation

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,47 @@
 # Environment Variables Template for TASUED Biometric System
 
+# ===========================================
+# SUPABASE CONFIGURATION (REQUIRED)
+# ===========================================
+# Get these from: https://supabase.com/dashboard/project/_/settings/api
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
+# Optional: Set to your domain in production
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# ===========================================
+# DATABASE CONFIGURATION
+# ===========================================
 # Database URL - Update this when deploying to Render
+# For Supabase, get this from: Database Settings > Connection String > URI
 DATABASE_URL="postgresql://user:password@localhost:5432/tasued_biometric_system"
 
+# ===========================================
+# SECURITY & ENCRYPTION
+# ===========================================
 # JWT Secret for authentication (use a strong secret in production)
 JWT_SECRET="your_strong_secret_key_here"
 
 # Encryption key for biometric data (32 character string for AES-256)
 ENCRYPTION_KEY="your_32_character_encryption_key_here"
 
-# Application URL
-NEXT_PUBLIC_API_URL=https://tasued-biometric-sys.onrender.com
-WEBAUTHN_RP_ID=tasued-biometric-sys.onrender.com
-WEBAUTHN_ORIGIN=https://tasued-biometric-sys.onrender.com
-
 # Security settings
 BCRYPT_SALT_ROUNDS=12
 
-# File upload settings
+# ===========================================
+# APPLICATION CONFIGURATION
+# ===========================================
+# Application URL (Used for redirects and callbacks)
+NEXT_PUBLIC_API_URL=https://tasued-biometric-sys.onrender.com
+
+# WebAuthn Configuration (for fingerprint/biometric authentication)
+WEBAUTHN_RP_ID=tasued-biometric-sys.onrender.com
+WEBAUTHN_ORIGIN=https://tasued-biometric-sys.onrender.com
+
+# ===========================================
+# FILE UPLOAD SETTINGS
+# ===========================================
 MAX_FILE_SIZE=5000000 # 5MB in bytes
 ALLOWED_FILE_TYPES=image/png,image/jpg,image/jpeg,application/pdf
