Configure Prisma connection pooling and directUrl for Supabase

--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,12 @@ NEXT_PUBLIC_SITE_URL=http://localhost:3000
 # ===========================================
 # DATABASE CONFIGURATION
 # ===========================================
-# Database URL - Update this when deploying to Render
-# For Supabase, get this from: Database Settings > Connection String > URI
-DATABASE_URL="postgresql://user:password@localhost:5432/tasued_biometric_system"
+# Database URL - Update this when deploying to Render or using Supabase
+# For Supabase Pooled Connection (Recommended): Use port 6543 and ?pgbouncer=true
+DATABASE_URL="postgresql://user:password@aws-0-eu-central-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+
+# For Supabase Direct Connection (Used for migrations): Use port 5432
+DIRECT_URL="postgresql://user:password@db.your-project.supabase.co:5432/postgres"
 
 # ===========================================
 # SECURITY & ENCRYPTION
