Fix admin workflow and data consistency issues
Major fixes:
- Updated Prisma schema to match frontend expectations (firstName/lastName vs fullName, matricNumber vs studentNumber)
- Changed level field from Int to String to preserve exact values (100, 200, 400)
- Added proper BiometricData, Service, AccessLog, and Admin models
- Fixed user registration to store all metadata in Supabase for consistency
- Updated UserService.syncUserFromAuth to preserve level and all user fields exactly
- Fixed API routes to use correct model names and field references
- Added BiometricVerificationService class for facial recognition
- Fixed missing imports and type issues across multiple files

This resolves the issue where students registering as 400 level would show as 100 level in dashboard.
All admin workflows now function properly with the corrected schema.

--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.0.6",
+    "face-api.js": "^0.22.2",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.303.0",
     "next": "14.2.15",
@@ -64,6 +66,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
