--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "date-fns": "^3.0.6",
     "face-api.js": "^0.22.2",
     "framer-motion": "^10.18.0",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.303.0",
     "next": "14.2.15",
     "next-themes": "^0.2.1",
