--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-hook-form": "^7.49.3",
     "react-webcam": "^7.2.0",
     "recharts": "^2.10.3",
+    "sharp": "^0.34.5",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
